--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "autoprefixer": "^10.4.20",
     "axios": "^1.8.1",
     "flatpickr": "^4.6.13",
+    "lucide-react": "^0.477.0",
     "next": "15.1.3",
     "react": "^19.0.0",
     "react-apexcharts": "^1.7.0",
