--- a/package.json
+++ b/package.json
@@ -19,10 +19,14 @@
     "@react-jvectormap/world": "^1.1.2",
     "@tailwindcss/forms": "^0.5.9",
     "@tanstack/react-table": "^8.21.2",
+    "@types/file-saver": "^2.0.7",
     "apexcharts": "^4.3.0",
     "autoprefixer": "^10.4.20",
     "axios": "^1.8.1",
     "clsx": "^2.1.1",
+    "exceljs": "^4.4.0",
+    "file-save": "^0.2.0",
+    "file-saver": "^2.0.5",
     "flatpickr": "^4.6.13",
     "lucide-react": "^0.477.0",
     "next": "15.1.3",
